remove text decoration on button

--- a/web_server/5-design_a_beautiful_404_page.html
+++ b/web_server/5-design_a_beautiful_404_page.html
@@ -56,6 +56,7 @@
       }
 
       .btn {
+        text-decoration: none;
         margin-top: 20px;
         padding: 10px 20px;
         font-size: 1rem;
@@ -78,6 +79,6 @@
     <p>Oops... Looks like you're lost in space!</p>
     <img src="astronaut.png" class="astronaut" alt="Floating Astronaut" />
     <br />
-    <a class="btn" href="#">Return to Safety</a>
+    <a class="btn" href="http://bienvenudev.tech">Return to Safety</a>
   </body>
 </html>
