add Ceci n'est pas une page

--- a/web_server/5-design_a_beautiful_404_page.html
+++ b/web_server/5-design_a_beautiful_404_page.html
@@ -76,6 +76,7 @@
   <body>
     <h1>404</h1>
     <br />
+    <p>Ceci n'est pas une page</p>
     <p>Oops... Looks like you're lost in space!</p>
     <img src="astronaut.png" class="astronaut" alt="Floating Astronaut" />
     <br />
